k8s/cluster.yml
---
kind: Namespace
apiVersion: v1
metadata:
  name: cluster-services
---
kind: Namespace
apiVersion: v1
metadata:
  name: etcd-operator
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: cluster-services
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 80
      name: http
    - protocol: TCP
      port: 443
      name: https
  type: LoadBalancer
  externalTrafficPolicy: Local
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: etcd-operator
  namespace: etcd-operator
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: etcd-operator
    spec:
      containers:
      - name: etcd-operator
        image: quay.io/coreos/etcd-operator:v0.9.2
        command:
        - etcd-operator
