k8s/traefik-controller.yml
---
kind: DaemonSet
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress
  namespace: cluster-services
  labels:
    k8s-app: traefik-ingress-lb
spec:
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik:alpine
        args: ["--kubernetes", "--etcd.endpoint=traefik-etcd-cluster-client.etcd-operator:2379", "--etcd.useAPIV3=true", "--etcd.prefix=/traefik"]
        name: traefik-ingress-lb
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cattle
  name: cattle-service-lb
  namespace: cluster-services
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: cattle
  sessionAffinity: None
  type: ClusterIP
