k8s/cattle.yml
---
kind: Namespace
apiVersion: v1
metadata:
  name: cattle-system
---
apiVersion: v1
kind: Service
metadata:
  namespace: cattle-system
  name: cattle-service
  labels:
    app: cattle
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    app: cattle
  type: LoadBalancer
  externalTrafficPolicy: Local
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  namespace: cattle-system
  name: cattle
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: cattle
    spec:
      serviceAccountName: cattle-admin
      containers:
      - image: rancher/rancher:v2.0.8
        command:
        - rancher
        - --no-cacerts
        - --http-listen-port=80
        imagePullPolicy: Always
        name: cattle-server
        ports:
        - containerPort: 80
          protocol: TCP
        - containerPort: 443
          protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cattle-ingress
  namespace: cattle-system
spec:
  rules:
  - host: your-hostname
    http:
      paths:
      - backend:
          serviceName: cattle-service-lb
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cattle
  name: cattle-service-lb
  namespace: cattle-system
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: cattle
  sessionAffinity: None
  type: ClusterIP
